# abstract_algebra

./: pyproject.toml
src/abstract_algebra/: finite_algebras.py
test/: test_abstract_matrix.py  test_cayley_table.py  test_finite_algebras.py  test_permutations.py
