[build-system]
requires = ["setuptools >= 77.0.3"]
build-backend = "setuptools.build_meta"

[project]
name = "abstract_algebra"
version = "0.0.2"
dependencies = [
  "numpy~=1.23.5",
  "scipy~=1.11.3",
  "sympy~=1.14.0",
]
requires-python = ">=3.11"
authors = [
  {name = "Alfred J. Reich", email = "al.reich@gmail.com"},
]
description = "A Python implementation of Finite Algebras: Magma, Semigroup, Monoid, Group, Ring, and Field"
readme = "README.md"
license = "MIT"
license-files = ["LICENSE"]
classifiers = [
  "Development Status :: 3 - Alpha",
  "Programming Language :: Python :: 3.11",
  "Private :: Do Not Upload",
]

[tool.setuptools.packages.find]
where = ["src"]

[project.urls]
Homepage = "https://github.com/alreich/abstract_algebra"
Documentation = "https://abstract-algebra.readthedocs.io/en/latest/index.html"
Repository = "https://github.com/alreich/abstract_algebra.git"
Issues = "https://github.com/alreich/abstract_algebra/issues"
